// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Description/Conditional Description Conditional Description 1`] = `
<dl
  className="description-list--single description-list"
>
  <dt
    className="description-list__description description-list__term description-list__term--single"
    description="a value"
  >
    A label
  </dt>
  <dd
    className="description-list__description description-list__description description-list__description--single"
    description="a value"
  >
    a value
  </dd>
</dl>
`;

exports[`Storyshots Description/Conditional Description With A Date 1`] = `
<dl
  className="description-list--single description-list"
>
  <dt
    className="description-list__description--conitional description-list__description description-list__term description-list__term--single"
  >
    A Date
  </dt>
  <dd
    className="description-list__description--conitional description-list__description description-list__description description-list__description--single"
  >
    <time
      dateTime={"2020-01-01T00:00:00.000Z"}
      title="2020-01-01T00:00:00+00:00"
    >
      January 1, 2020
    </time>
  </dd>
</dl>
`;

exports[`Storyshots Description/Conditional Description With False Condition 1`] = `null`;

exports[`Storyshots Description/Conditional Description With Falsy Condition 1`] = `null`;

exports[`Storyshots Description/Conditional Description With Falsy Nested Value 1`] = `null`;

exports[`Storyshots Description/Conditional Description With Falsy Nested Value And Condition 1`] = `null`;

exports[`Storyshots Description/Conditional Description With Falsy Value 1`] = `null`;

exports[`Storyshots Description/Conditional Description With Not A Date 1`] = `null`;

exports[`Storyshots Description/Conditional Description With Not A Time 1`] = `null`;

exports[`Storyshots Description/Conditional Description With True Condition 1`] = `
<dl
  className="description-list--single description-list"
>
  <dt
    className="description-list__description description-list__term description-list__term--single"
    description="A value"
  >
    A label
  </dt>
  <dd
    className="description-list__description description-list__description description-list__description--single"
    description="A value"
  >
    A value
  </dd>
</dl>
`;

exports[`Storyshots Description/Conditional Description Without Value 1`] = `null`;
